den1-k8s01/warehouse20/tautulli-gooery/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-gooery
  namespace: warehouse20
  labels:
    app: tautulli
    instance: gooery
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
  selector:
    app: tautulli
    instance: gooery
