den1-k8s01/warehouse20/tautulli-gooery/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "http://organizr.warehouse20.svc.cluster.local/api/v2/auth?group=1"
    nginx.ingress.kubernetes.io/auth-signin: "https://warehouse20.com/?error=401"
  labels:
    app: tautulli
    instance: gooery
  name: tautulli-gooery
  namespace: warehouse20
spec:
  rules:
  - host: gooery-stats.warehouse20.com
    http:
      paths:
      - backend:
          serviceName: tautulli-gooery
          servicePort: http
        path: /
  tls:
  - hosts:
    - "warehouse20.com"
    - "*.warehouse20.com"
    secretName: w20-tls
